# workshop_airflow

./: .pre-commit-config.yaml  pyproject.toml
